@@ -7,5 +7,6 @@ set SCRIPT_CLASS_PATH=../lib/jxl.jar
 set SCRIPT_PATH=../script/export.groovy
 set SCRIPT_DATA_SOURCE=vis-skoly
 set SCRIPT_MONTH_SHIFT=0
+set JAVA_OPTS=-Xmx512m -Xms512m -XX:MaxPermSize=256m
 
 %GROOVY_HOME%\bin\groovy -cp %SCRIPT_CLASS_PATH% %SCRIPT_PATH% -s %SCRIPT_DATA_SOURCE% -m %SCRIPT_MONTH_SHIFT%
